/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    `java-library`
    antlr
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

dependencies {
    antlr("org.antlr:antlr4:4.13.2")
    implementation("org.antlr:antlr4-runtime:4.13.2")
    testImplementation(libs.junit.junit)
}

group = "cn.edu.sjtu.songyuke"
version = "1.0-SNAPSHOT"
description = "mental"
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

tasks.compileJava {
    dependsOn(tasks.generateGrammarSource)
}

tasks.generateGrammarSource {
    maxHeapSize = "64m"
    outputDirectory = file(layout.buildDirectory.dir("generated-src/antlr/main/cn/edu/sjtu/songyuke/mental/antlr4"))
    arguments = arguments + listOf("-visitor", "-long-messages", "-package", "cn.edu.sjtu.songyuke.mental.antlr4")
}
